--- a/application/views/scripts/estatistica/biometriacamarao.phtml
+++ b/application/views/scripts/estatistica/biometriacamarao.phtml
@@ -100,7 +100,7 @@
 <p> Peso Mínimo: <b><?=$this->mintbc_peso ?>g</b> </p>
 <br/>
 <div class="box-chart">
-    <legend>Gráfico 2: Gráfico de Disperção do Camarão <?=$this->especie ?> do comprimento da carapaça (mm) pelo peso (g)</legend>
+    <legend>Gráfico 2: Gráfico de Dispersão do Camarão <?=$this->especie ?> do comprimento da carapaça (mm) pelo peso (g)</legend>
   <canvas id="graf2" style="width:100%;"></canvas>
 </div>
 <br/>
