--- a/application/views/scripts/estatistica/tableesp.phtml
+++ b/application/views/scripts/estatistica/tableesp.phtml
@@ -31,7 +31,7 @@
             <td>Arrasto de Fundo</td>
             <td><?= $entrevista['esp_nome_comum'] ?></td>
             <td><?= $entrevista['tbp_comprimento']." cm" ?></td>
-            <td><?= $entrevista['tbp_peso']." g" ?></td>
+            <td><?= $entrevista['tbp_peso']." kg" ?></td>
             <td><?= $entrevista['tbp_sexo'] ?></td>
             <td><?= $entrevista['af_id'] ?></td>
             <td class="td-botao">
@@ -50,7 +50,7 @@
             <td>Calão</td>
             <td><?= $entrevista['esp_nome_comum'] ?></td>
             <td><?= $entrevista['tbp_comprimento']." cm" ?></td>
-            <td><?= $entrevista['tbp_peso']." g" ?></td>
+            <td><?= $entrevista['tbp_peso']." kg" ?></td>
             <td><?= $entrevista['tbp_sexo'] ?></td>
             <td><?= $entrevista['cal_id'] ?></td>
             <td class="td-botao">
@@ -70,7 +70,7 @@
             <td>Coleta Manual</td>
             <td><?= $entrevista['esp_nome_comum'] ?></td>
             <td><?= $entrevista['tbp_comprimento']." cm" ?></td>
-            <td><?= $entrevista['tbp_peso']." g" ?></td>
+            <td><?= $entrevista['tbp_peso']." kg" ?></td>
             <td><?= $entrevista['tbp_sexo'] ?></td>
             <td><?= $entrevista['cml_id'] ?></td>
             <td class="td-botao">
@@ -89,7 +89,7 @@
             <td>Emalhe</td>
             <td><?= $entrevista['esp_nome_comum'] ?></td>
             <td><?= $entrevista['tbp_comprimento']." cm" ?></td>
-            <td><?= $entrevista['tbp_peso']." g" ?></td>
+            <td><?= $entrevista['tbp_peso']." kg" ?></td>
             <td><?= $entrevista['tbp_sexo'] ?></td>
             <td><?= $entrevista['em_id'] ?></td>
             <td class="td-botao">
@@ -108,7 +108,7 @@
             <td>Groseira/Espinhel</td>
             <td><?= $entrevista['esp_nome_comum'] ?></td>
             <td><?= $entrevista['tbp_comprimento']." cm" ?></td>
-            <td><?= $entrevista['tbp_peso']." g" ?></td>
+            <td><?= $entrevista['tbp_peso']." kg" ?></td>
             <td><?= $entrevista['tbp_sexo'] ?></td>
             <td><?= $entrevista['grs_id'] ?></td>
             <td class="td-botao">
@@ -127,7 +127,7 @@
             <td>Jereré</td>
             <td><?= $entrevista['esp_nome_comum'] ?></td>
             <td><?= $entrevista['tbp_comprimento']." cm" ?></td>
-            <td><?= $entrevista['tbp_peso']." g" ?></td>
+            <td><?= $entrevista['tbp_peso']." kg" ?></td>
             <td><?= $entrevista['tbp_sexo'] ?></td>
             <td><?= $entrevista['jre_id'] ?></td>
             <td class="td-botao">
@@ -146,7 +146,7 @@
             <td>Pesca de Linha</td>
             <td><?= $entrevista['esp_nome_comum'] ?></td>
             <td><?= $entrevista['tbp_comprimento']." cm" ?></td>
-            <td><?= $entrevista['tbp_peso']." g" ?></td>
+            <td><?= $entrevista['tbp_peso']." kg" ?></td>
             <td><?= $entrevista['tbp_sexo'] ?></td>
             <td><?= $entrevista['lin_id'] ?></td>
             <td class="td-botao">
@@ -165,7 +165,7 @@
             <td>Linha de Fundo</td>
             <td><?= $entrevista['esp_nome_comum'] ?></td>
             <td><?= $entrevista['tbp_comprimento']." cm" ?></td>
-            <td><?= $entrevista['tbp_peso']." g" ?></td>
+            <td><?= $entrevista['tbp_peso']." kg" ?></td>
             <td><?= $entrevista['tbp_sexo'] ?></td>
             <td><?= $entrevista['lf_id'] ?></td>
             <td class="td-botao">
@@ -184,7 +184,7 @@
             <td>Manzua</td>
             <td><?= $entrevista['esp_nome_comum'] ?></td>
             <td><?= $entrevista['tbp_comprimento']." cm" ?></td>
-            <td><?= $entrevista['tbp_peso']." g" ?></td>
+            <td><?= $entrevista['tbp_peso']." kg" ?></td>
             <td><?= $entrevista['tbp_sexo'] ?></td>
             <td><?= $entrevista['man_id'] ?></td>
             <td class="td-botao">
@@ -204,7 +204,7 @@
             <td>Mergulho</td>
             <td><?= $entrevista['esp_nome_comum'] ?></td>
             <td><?= $entrevista['tbp_comprimento']." cm" ?></td>
-            <td><?= $entrevista['tbp_peso']." g" ?></td>
+            <td><?= $entrevista['tbp_peso']." kg" ?></td>
             <td><?= $entrevista['tbp_sexo'] ?></td>
             <td><?= $entrevista['mer_id'] ?></td>
             <td class="td-botao">
@@ -223,7 +223,7 @@
             <td>Ratoeira</td>
             <td><?= $entrevista['esp_nome_comum'] ?></td>
             <td><?= $entrevista['tbp_comprimento']." cm" ?></td>
-            <td><?= $entrevista['tbp_peso']." g" ?></td>
+            <td><?= $entrevista['tbp_peso']." kg" ?></td>
             <td><?= $entrevista['tbp_sexo'] ?></td>
             <td><?= $entrevista['rat_id'] ?></td>
             <td class="td-botao">
@@ -243,7 +243,7 @@
             <td>Siripoia</td>
             <td><?= $entrevista['esp_nome_comum'] ?></td>
             <td><?= $entrevista['tbp_comprimento']." cm" ?></td>
-            <td><?= $entrevista['tbp_peso']." g" ?></td>
+            <td><?= $entrevista['tbp_peso']." kg" ?></td>
             <td><?= $entrevista['tbp_sexo'] ?></td>
             <td><?= $entrevista['sir_id'] ?></td>
             <td class="td-botao">
@@ -262,7 +262,7 @@
             <td>Tarrafa</td>
             <td><?= $entrevista['esp_nome_comum'] ?></td>
             <td><?= $entrevista['tbp_comprimento']." cm" ?></td>
-            <td><?= $entrevista['tbp_peso']." g" ?></td>
+            <td><?= $entrevista['tbp_peso']." kg" ?></td>
             <td><?= $entrevista['tbp_sexo'] ?></td>
             <td><?= $entrevista['tar_id'] ?></td>
             <td class="td-botao">
@@ -281,7 +281,7 @@
             <td>Vara de Pesca</td>
             <td><?= $entrevista['esp_nome_comum'] ?></td>
             <td><?= $entrevista['tbp_comprimento']." cm" ?></td>
-            <td><?= $entrevista['tbp_peso']." g" ?></td>
+            <td><?= $entrevista['tbp_peso']." kg" ?></td>
             <td><?= $entrevista['tbp_sexo'] ?></td>
             <td><?= $entrevista['vp_id'] ?></td>
             <td class="td-botao">
