--- a/application/views/scripts/siripoia/editar.phtml
+++ b/application/views/scripts/siripoia/editar.phtml
@@ -257,7 +257,7 @@
                     <option value="I">Indefinido</option>
                 </select>
                 
-                <input class="responsivo" style="float:left;" type="text" name="pesoPeixe" placeholder="Peso (g)" size="10px">
+                <input class="responsivo" style="float:left;" type="text" name="pesoPeixe" placeholder="Peso (kg)" size="10px">
 
                 
             </div>
