--- a/application/views/scripts/estatistica/biometriapeixe.phtml
+++ b/application/views/scripts/estatistica/biometriapeixe.phtml
@@ -47,7 +47,7 @@
         scaleShowHorizontalLines: true,
         scaleShowLabels: true,
         scaleLabel: "<%=value%>cm",
-        scaleArgLabel: "<%=value%>g",
+        scaleArgLabel: "<%=value%>kg",
         scaleBeginAtZero: true,
         animation: false
     };
@@ -94,13 +94,13 @@
   <canvas id="embByPorto" style="width:100%;"></canvas>
 </div>
 <br/>
-<p> Média de Peso: <b><?= round($this->mediatbp_peso,2) ?>g</b> </p>
-<p> Peso Máximo: <b><?=$this->maxtbp_peso ?>g</b> </p>
-<p> Peso Mínimo: <b><?=$this->mintbp_peso ?>g</b> </p>
+<p> Média de Peso: <b><?= round($this->mediatbp_peso,2) ?>kg</b> </p>
+<p> Peso Máximo: <b><?=$this->maxtbp_peso ?>kg</b> </p>
+<p> Peso Mínimo: <b><?=$this->mintbp_peso ?>kg</b> </p>
 <br/>
 <br/>
 <div class="box-chart">
-    <legend>Gráfico 2: Frequência do Peixe <?=$this->especie ?> por classes de peso padrão (g)</legend>
+    <legend>Gráfico 2: Gráfico de Dispersão do Camarão <?=$this->especie ?> do comprimento da carapaça (mm) pelo peso (g)</legend>
   <canvas id="embByConser" style="width:100%;"></canvas>
 </div>
 <br/>
