--- a/application/views/scripts/linha/editar.phtml
+++ b/application/views/scripts/linha/editar.phtml
@@ -264,7 +264,7 @@
                     <option value="I">Indefinido</option>
                 </select>
                 
-                <input style="float:left;" type="text" name="pesoPeixe" placeholder="Peso (g)" size="10px">
+                <input style="float:left;" type="text" name="pesoPeixe" placeholder="Peso (kg)" size="10px">
 
                 
             </div>
