--- a/application/views/scripts/linha/editar.phtml
+++ b/application/views/scripts/linha/editar.phtml
@@ -208,7 +208,7 @@
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
             <div id="base">
-                <input onclick="ajax_esp_capturada(this.form, '<?= $this->url(array("controller" => "linha", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['lin_id']?>', '')" type="button" value="Adicionar" />
+                <input class="responsivo" onclick="ajax_select_peso_permitido(this.form, '<?= $this->url(array("controller" => "linha", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['lin_id'] ?>, '','<?= $this->url(array("controller" => "linha", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
                 <select style="float:left;" name="selectEspecie">
                     <?php foreach ($this->especies as $key => $especie): ?>
                         <option value="<?= $especie['esp_id']; ?>"><?= $especie['esp_nome_comum']; ?></option>
@@ -219,7 +219,7 @@
                 <input style="float:left;" type="text" name="precokg" placeholder="Preço por kg" size="10px">
 
                 <input type="hidden" name="id_entrevista"  value="<?= $this->entrevista['lin_id'] ?>"/>
-
+                <?php include('mediaespecies.phtml'); ?>
             </div>
 
         </fieldset>
