--- a/application/views/scripts/mergulho/editar.phtml
+++ b/application/views/scripts/mergulho/editar.phtml
@@ -188,7 +188,7 @@
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
             <div >
-                <input class="responsivo" onclick="ajax_esp_capturada(this.form, '<?= $this->url(array("controller" => "mergulho", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['mer_id']?>','venda')" type="button" value="Adicionar" />
+                <input class="responsivo" onclick="ajax_select_peso_permitido(this.form, '<?= $this->url(array("controller" => "mergulho", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['mer_id'] ?>, '','<?= $this->url(array("controller" => "mergulho", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
                 <select class="responsivo-esp"  name="selectEspecie" class="espc">
                     <option value="" selected></option>
                     <?php foreach ($this->especies as $key => $especie): ?>
@@ -204,7 +204,7 @@
                      <?php endforeach; ?>
                 </select>
                 <input class="responsivo" type="hidden" name="id_entrevista"  value="<?= $this->entrevista['mer_id'] ?>"/>
-
+                <?php include('mediaespecies.phtml'); ?>
             </div>
 
         </fieldset>
