--- a/application/views/scripts/tarrafa/editar.phtml
+++ b/application/views/scripts/tarrafa/editar.phtml
@@ -166,7 +166,7 @@
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
             <div id="base">
-                <input class="responsivo" onclick="ajax_esp_capturada(this.form, '<?= $this->url(array("controller" => "tarrafa", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['tar_id']?>','')" type="button" value="Adicionar" />
+                <input class="responsivo" onclick="ajax_select_peso_permitido(this.form, '<?= $this->url(array("controller" => "tarrafa", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['tar_id'] ?>, '','<?= $this->url(array("controller" => "tarrafa", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
                 <select style="float:left;" name="selectEspecie" class="espc">
                     <option value="" selected></option>
                     <?php foreach ($this->especies as $key => $especie): ?>
@@ -178,7 +178,7 @@
                 <input class="responsivo" style="float:left;" type="text" name="precokg" placeholder="Preço por kg" size="10px">
 
                 <input class="responsivo" type="hidden" name="id_entrevista"  value="<?= $this->entrevista['tar_id'] ?>"/>
-
+                <?php include('mediaespecies.phtml'); ?>
             </div>
 
         </fieldset>
