--- a/application/views/scripts/coleta-manual/editar.phtml
+++ b/application/views/scripts/coleta-manual/editar.phtml
@@ -189,7 +189,7 @@
             <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
                 <div>
-                    <input class="responsivo" onclick="ajax_esp_capturada(this.form, '<?= $this->url(array("controller" => "coleta-manual", "action" => "insertespeciecapturada"), null, true) ?>','<?= $this->entrevista['cml_id'] ?>', 'venda')" type="button" value="Adicionar" />
+                    <input class="responsivo" onclick="ajax_select_quantidade_permitido(this.form, '<?= $this->url(array("controller" => "coleta-manual", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['cml_id'] ?>, '','<?= $this->url(array("controller" => "coleta-manual", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
                     <select class="responsivo-esp"  name="selectEspecie" class="espc">
                         <option value="" selected></option>
                         <?php foreach ($this->especies as $key => $especie): ?>
@@ -205,7 +205,7 @@
                         <?php endforeach; ?>
                     </select>
                     <input type="hidden" name="id_entrevista"  value="<?= $this->entrevista['cml_id'] ?>"/>
-
+                    <?php include('mediaespecies.phtml'); ?>
                 </div>
 
             </fieldset>
