--- a/application/views/scripts/emalhe/editar.phtml
+++ b/application/views/scripts/emalhe/editar.phtml
@@ -199,8 +199,8 @@
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
             <div id="base">
-                <input class="responsivo" onclick="ajax_esp_capturada(this.form, '<?= $this->url(array("controller" => "emalhe", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['em_id']?>', '')" type="button" value="Adicionar" />
-                <select class="responsivo" style="float:left;" name="selectEspecie">
+               <input class="responsivo" onclick="ajax_select_peso_permitido(this.form, '<?= $this->url(array("controller" => "emalhe", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['em_id'] ?>, '','<?= $this->url(array("controller" => "emalhe", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
+               <select class="responsivo" style="float:left;" name="selectEspecie">
                     <option value="" selected></option>
                     <?php foreach ($this->especies as $key => $especie): ?>
                         <option value="<?= $especie['esp_id']; ?>"><?= $especie['esp_nome_comum']; ?></option>
@@ -211,7 +211,7 @@
                 <input class="responsivo" style="float:left;" type="text" name="precokg" placeholder="Preço" size="10px">
 
                 <input type="hidden" name="id_entrevista"  value="<?= $this->entrevista['em_id'] ?>"/>
-
+                <?php include('mediaespecies.phtml'); ?>
             </div>
 
         </fieldset>
