--- a/application/views/scripts/linha-fundo/editar.phtml
+++ b/application/views/scripts/linha-fundo/editar.phtml
@@ -236,7 +236,7 @@
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
             <div >
-                <input  onclick="ajax_esp_capturada(this.form, '<?= $this->url(array("controller" => "linha-fundo", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['lf_id']?>', 'venda')" type="button" value="Adicionar" />
+                <input class="responsivo" onclick="ajax_select_peso_permitido(this.form, '<?= $this->url(array("controller" => "linha-fundo", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['lf_id'] ?>, '','<?= $this->url(array("controller" => "linha-fundo", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
                 <select class="responsivo-esp" name="selectEspecie">
                     <?php foreach ($this->especies as $key => $especie): ?>
                         <option value="<?= $especie['esp_id']; ?>"><?= $especie['esp_nome_comum']; ?></option>
@@ -252,7 +252,7 @@
                 </select>
 
                 <input type="hidden" name="id_entrevista"  value="<?= $this->entrevista['lf_id'] ?>"/>
-
+                <?php include('mediaespecies.phtml'); ?>
             </div>
 
         </fieldset>
