--- a/application/views/scripts/manzua/editar.phtml
+++ b/application/views/scripts/manzua/editar.phtml
@@ -193,7 +193,7 @@
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
             <div >
-                <input class="responsivo" onclick="ajax_esp_capturada(this.form, '<?= $this->url(array("controller" => "manzua", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['man_id']?>','venda')" type="button" value="Adicionar" />
+                <input class="responsivo" onclick="ajax_select_peso_permitido(this.form, '<?= $this->url(array("controller" => "manzua", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['man_id'] ?>, '','<?= $this->url(array("controller" => "manzua", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
                 <select class="responsivo-esp"  name="selectEspecie" class="espc">
                     <?php foreach ($this->especies as $key => $especie): ?>
                         <option value="<?= $especie['esp_id']; ?>"><?= $especie['esp_nome_comum']; ?></option>
@@ -208,7 +208,7 @@
                      <?php endforeach; ?>
                 </select>
                 <input  type="hidden" name="id_entrevista"  value="<?= $this->entrevista['man_id'] ?>"/>
-
+                <?php include('mediaespecies.phtml'); ?>
             </div>
 
         </fieldset>
