--- a/application/views/scripts/ratoeira/editar.phtml
+++ b/application/views/scripts/ratoeira/editar.phtml
@@ -194,7 +194,7 @@
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
             <div >
-                <input class="responsivo" onclick="ajax_esp_capturada(this.form, '<?= $this->url(array("controller" => "ratoeira", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['rat_id']?>','venda')" type="button" value="Adicionar" />
+                <input class="responsivo" onclick="ajax_select_quantidade_permitido(this.form, '<?= $this->url(array("controller" => "ratoeira", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['rat_id'] ?>, '','<?= $this->url(array("controller" => "ratoeira", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
                 <select class="responsivo-esp" style="float:left;" name="selectEspecie" class="espc">
                     <option value="" selected></option>
                     <?php foreach ($this->especies as $key => $especie): ?>
@@ -211,7 +211,7 @@
                      <?php endforeach; ?>
                 </select>
                 <input class="responsivo" type="hidden" name="id_entrevista"  value="<?= $this->entrevista['rat_id'] ?>"/>
-
+                <?php include('mediaespecies.phtml'); ?>
             </div>
 
         </fieldset>
