--- a/application/views/scripts/siripoia/editar.phtml
+++ b/application/views/scripts/siripoia/editar.phtml
@@ -193,7 +193,7 @@
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
             <div>
-                <input class="responsivo" onclick="ajax_esp_capturada(this.form, '<?= $this->url(array("controller" => "siripoia", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['sir_id']?>','venda')" type="button" value="Adicionar" />
+                <input class="responsivo" onclick="ajax_select_quantidade_permitido(this.form, '<?= $this->url(array("controller" => "siripoia", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['sir_id'] ?>, '','<?= $this->url(array("controller" => "siripoia", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
                 <select class="responsivo-esp"  name="selectEspecie" class="espc">
                     <option value="" selected></option>
                     <?php foreach ($this->especies as $key => $especie): ?>
@@ -210,7 +210,7 @@
                      <?php endforeach; ?>
                 </select>
                 <input type="hidden" name="id_entrevista"  value="<?= $this->entrevista['sir_id'] ?>"/>
-
+                <?php include('mediaespecies.phtml'); ?>
             </div>
 
         </fieldset>
