--- a/application/views/scripts/vara-pesca/editar.phtml
+++ b/application/views/scripts/vara-pesca/editar.phtml
@@ -230,7 +230,7 @@
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
             <div>
-                <input class="responsivo" onclick="ajax_esp_capturada(this.form, '<?= $this->url(array("controller" => "vara-pesca", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['vp_id']?>','venda')" type="button" value="Adicionar" />
+                <input class="responsivo" onclick="ajax_select_peso_permitido(this.form, '<?= $this->url(array("controller" => "vara-pesca", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['vp_id'] ?>, '','<?= $this->url(array("controller" => "vara-pesca", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
                 <select class="responsivo-esp" style="float:left;" name="selectEspecie" class="responsivo" >
                     <option value="" selected></option>
                     <?php foreach ($this->especies as $key => $especie): ?>
@@ -247,7 +247,7 @@
                      <?php endforeach; ?>
                 </select>
                 <input class="responsivo" type="hidden" name="id_entrevista"  value="<?= $this->entrevista['vp_id'] ?>"/>
-
+                <?php include('mediaespecies.phtml'); ?>
             </div>
 
         </fieldset>
