Atualizações gráficos biometrias

--- a/application/views/scripts/estatistica/biometriacamarao.phtml
+++ b/application/views/scripts/estatistica/biometriacamarao.phtml
@@ -47,8 +47,8 @@
         showTooltips: true,
         scaleShowHorizontalLines: true,
         scaleShowLabels: true,
-        scaleLabel: "<%=value%>mm",
-        scaleArgLabel: "<%=value%>g",
+        scaleLabel: "<%=value%>g",
+        scaleArgLabel: "<%=value%>mm",
         scaleBeginAtZero: true,
         animation: false
     };
@@ -71,7 +71,7 @@
    var pesoCamarao = [
         {
             
-            label: 'peso/comprimento',
+            label: 'comprimento/peso',
             strokeColor: 'rgba(95,48,43,.8)',
             data: 
                     <?= $this->DadosCamarao ?>
