--- a/application/views/scripts/estatistica/index.phtml
+++ b/application/views/scripts/estatistica/index.phtml
@@ -1,6 +1,6 @@
 <div id="titulos">
         <h2>Relatórios</h2>
-        <h3>Espécies</h3>
+        <h3>Estatisticas</h3>
     </div>
  <a href="<?= $this->url(array("controller" => "index-admin", "action" => "index"), null, true) ?>" id="botao-ancora">Voltar</a><br/><br/>
 <a class="relatorio" href="<?= $this->url(array("controller" => "estatistica", "action" => "pescador"), null, true) ?>">Pescadores</a><br/>
