--- a/application/views/scripts/estatistica/unidadecaptura.phtml
+++ b/application/views/scripts/estatistica/unidadecaptura.phtml
@@ -169,7 +169,7 @@
        ]
    };
    var pescadoresByPortoMergulho = {
-       labels: <?= $this->portosRatoeira ?>,
+       labels: <?= $this->portosMergulho ?>,
        datasets: [
            {
                label: "Quantidade de Pescadores Por Porto",
