--- a/application/views/scripts/estatistica/biometriapeixe.phtml
+++ b/application/views/scripts/estatistica/biometriapeixe.phtml
@@ -46,8 +46,8 @@
         showTooltips: true,
         scaleShowHorizontalLines: true,
         scaleShowLabels: true,
-        scaleLabel: "<%=value%>cm",
-        scaleArgLabel: "<%=value%>kg",
+        scaleLabel: "<%=value%>kg",
+        scaleArgLabel: "<%=value%>cm",
         scaleBeginAtZero: true,
         animation: false
     };
@@ -100,7 +100,7 @@
 <br/>
 <br/>
 <div class="box-chart">
-    <legend>Gráfico 2: Gráfico de Dispersão do Camarão <?=$this->especie ?> do comprimento da carapaça (mm) pelo peso (g)</legend>
+    <legend>Gráfico 2: Gráfico de Dispersão do Peixe <?=$this->especie ?> do comprimento da carapaça (mm) pelo peso (kg)</legend>
   <canvas id="embByConser" style="width:100%;"></canvas>
 </div>
 <br/>
