--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -21,8 +21,8 @@
         <div id="geral">
             
             <div id="topo">
-                <div id="topoLeft"></div>
-                <div id="topoRight"></div>
+                <div id="topoLeft"><img src="img/Rachycentronlogo.png"/></div>
+                <div id="topoRight"><img src="img/mpesca.png"/></div>
             </div>
             
             <div id="menu">
